--- a/ansible/templates/app/app.service.j2
+++ b/ansible/templates/app/app.service.j2
@@ -20,6 +20,7 @@ Environment='SMTP_HOST={{ vault_SMTP_HOST }}'
 Environment='SMTP_PORT={{ vault_SMTP_PORT }}'
 Environment='GOOGLE_OAUTH_CLIENT_ID={{ vault_GOOGLE_OAUTH_CLIENT_ID }}'
 Environment='GOOGLE_OAUTH_CLIENT_SECRET={{ vault_GOOGLE_OAUTH_CLIENT_SECRET }}'
+Environment='S3_BASE_URL={{ S3_BASE_URL }}'
 WorkingDirectory={{ service_working_dir }}
 ExecStart={{ service_working_dir }}/{{ service_binary_name }}
 
