--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -206,3 +206,21 @@
 .welcome-bg-bottom {
   background-image: url('/welcon-bg.jpg');
 }
+
+:root {
+  h1 {
+    @apply text-4xl md:text-5xl font-bold;
+  }
+  h2 {
+    @apply text-3xl md:text-4xl font-semibold;
+  }
+  h3 {
+    @apply text-2xl md:text-3xl font-semibold;
+  }
+  h4 {
+    @apply text-xl md:text-2xl font-medium;
+  }
+  h5 {
+    @apply text-lg md:text-xl font-medium;
+  }
+}
